[package]
name = "kleestor"
description = "Key-value storage engine for LilacDB, named after Klee."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasthash = "^0.4.0"
futures = "^0.3.21"
futures-locks = "^0.7.0"
json = "^0.11.13"
memmap = "^0.6.2"
tokio = { version = "^1.17.0", features = ["sync"] }
